--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <h1>First Name</h1>
+    <div id="main">
+      <div id="header">
+        <ul id="nav">
+          <li><a href="">Home</a></li>
+          <li><a href="">Band</a></li>
+          <li><a href="">Tour</a></li>
+          <li><a href="">Contact</a></li>
+          <li>
+            <a href="#">More</a>
+            <ul class="subnav">
+              <li><a href="">Merchandise</a></li>
+              <li><a href=""></a>Extras</li>
+              <li><a href=""></a>Media</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+
+      <div id="slider"></div>
+
+      <div id="content"></div>
+
+      <div id="footer"></div>
+    </div>
   </body>
 </html>
