--- a/index.html
+++ b/index.html
@@ -50,8 +50,123 @@
         </div>
       </div>
 
-      <div id="content"></div>
+      <div id="content">
+        <!-- About section -->
+        <div class="content-section">
+          <h2 class="section-heading">The Band</h2>
+          <p class="section-slogan">We love music</p>
+          <p class="about-content">
+            We have created a fictional band website. Lorem ipsum dolor sit
+            amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat.
+          </p>
+          <div class="member">
+            <div class="member-item">
+              <p class="member-name">Name</p>
+              <img
+                src="./assets/img/band/bandmember.jpg"
+                alt="Name"
+                class="member-avt"
+              />
+            </div>
+            <div class="member-item">
+              <p class="member-name">Name</p>
+              <img
+                src="./assets/img/band/bandmember.jpg"
+                alt="Name"
+                class="member-avt"
+              />
+            </div>
+            <div class="member-item">
+              <p class="member-name">Name</p>
+              <img
+                src="./assets/img/band/bandmember.jpg"
+                alt="Name"
+                class="member-avt"
+              />
+            </div>
+            <div class="clear"></div>
+          </div>
+        </div>
 
+        <!-- Tour section -->
+        <div class="tour-section">
+          <div class="content-section">
+            <h2 class="section-heading white-color">Tour Dates</h2>
+            <p class="section-slogan white-color">
+              Remember to book your tickets!
+            </p>
+            <ul class="ticket-list">
+              <li>September <span class="sold-out">Sout out</span></li>
+              <li>October <span class="sold-out">Sout out</span></li>
+              <li>November <span class="quantily">3</span></li>
+            </ul>
+            <!-- Places -->
+            <div class="places-list">
+              <div class="place-item">
+                <img
+                  src="./assets/img/tour/newyork.jpg"
+                  alt="New Youk"
+                  class="place-img"
+                />
+                <div class="place-boby">
+                  <h3 class="place-heading">New York</h3>
+                  <p class="place-time">Fri 27 Nov 2016</p>
+                  <p class="place-description">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <a href="#" class="place-buy-btn">Buy Ticket</a>
+                </div>
+              </div>
+              <div class="place-item">
+                <img
+                  src="./assets/img/tour/paris.jpg"
+                  alt="New Youk"
+                  class="place-img"
+                />
+                <div class="place-boby">
+                  <h3 class="place-heading">Paris</h3>
+                  <p class="place-time">Sat 28 Nov 2016</p>
+                  <p class="place-description">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <a href="#" class="place-buy-btn">Buy Ticket</a>
+                </div>
+              </div>
+              <div class="place-item">
+                <img
+                  src="./assets/img/tour/sanfran.jpg"
+                  alt="New Youk"
+                  class="place-img"
+                />
+                <div class="place-boby">
+                  <h3 class="place-heading">San Fracisco</h3>
+                  <p class="place-time">Sun 29 Nov 2016</p>
+                  <p class="place-description">
+                    Praesent tincidunt sed tellus ut rutrum sed vitae justo.
+                  </p>
+                  <a href="#" class="place-buy-btn">Buy Ticket</a>
+                </div>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Contact section -->
+        <div class="content-section">
+          <h2 class="section-heading">Contact</h2>
+          <p class="section-slogan">Fan? Drop a note!</p>
+        </div>
+      </div>
       <div id="footer"></div>
     </div>
   </body>
