--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
         </div>
 
-        <!-- Contact section -->
+        <!-- Begin Contact section -->
         <div class="content-section">
           <h2 class="section-heading">Contact</h2>
           <p class="section-slogan">Fan? Drop a note!</p>
@@ -232,8 +232,22 @@
             </div>
           </div>
         </div>
+        <!-- End  Contact section -->
+        <div class="map-section">
+          <img src="./assets/img/map.jpg" alt="Map" style="width: 100%" />
+        </div>
       </div>
-      <div id="footer"></div>
+      <div id="footer">
+        <div class="social-list">
+          <a href=""><i class="ti-facebook"></i></a>
+          <a href=""><i class="ti-instagram"></i></a>
+          <a href=""><i class="ti-youtube"></i></a>
+          <a href=""><i class="ti-pinterest-alt"></i></a>
+          <a href=""><i class="ti-twitter-alt"></i></a>
+          <a href=""><i class="ti-linkedin"></i></a>
+        </div>
+        <p class="copyright">Powered by<a href="w3.css">w3.css</a></p>
+      </div>
     </div>
     <div class="js-modal modal">
       <div class="modal-container js-modal-container">
