--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyBand</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/musical-note.png">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="stylesheet"
@@ -16,17 +17,17 @@
       <div id="header">
         <!-- begin nav bar -->>
         <ul id="nav">
-          <li><a href="">Home</a></li>
-          <li><a href="">Band</a></li>
-          <li><a href="">Tour</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#Band">Band</a></li>
+          <li><a href="#tour">Tour</a></li>
+          <li><a href="#contact">Contact</a></li>
           <li>
             <a href="#">
               More
               <i class="nav-arrow-down ti-angle-down"></i>
             </a>
             <ul class="subnav">
-              <li><a href="">Merchandise</a></li>
+              <li><a href="#Merchandise">Merchandise</a></li>
               <li><a href="">Extras</a></li>
               <li><a href="">Media</a></li>
             </ul>
@@ -52,7 +53,7 @@
 
       <div id="content">
         <!-- About section -->
-        <div class="content-section">
+        <div class="content-section" id="Band">
           <h2 class="section-heading">The Band</h2>
           <p class="section-slogan">We love music</p>
           <p class="about-content">
@@ -98,7 +99,7 @@
         </div>
 
         <!-- Tour section -->
-        <div class="tour-section">
+        <div class="tour-section" id="tour">
           <div class="content-section">
             <h2 class="section-heading white-color">Tour Dates</h2>
             <p class="section-slogan white-color">
@@ -110,7 +111,7 @@
               <li>November <span class="quantily">3</span></li>
             </ul>
             <!-- Places -->
-            <div class="row places-list">
+            <div class="row places-list" id="Merchandise">
               <div class="col-third column">
                 <img
                   src="./assets/img/tour/newyork.jpg"
@@ -168,7 +169,7 @@
         </div>
 
         <!-- Begin Contact section -->
-        <div class="content-section">
+        <div class="content-section" id="contact">
           <h2 class="section-heading">Contact</h2>
           <p class="section-slogan">Fan? Drop a note!</p>
           <div class="row contact-content">
