--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MyBand</title>
     <link rel="icon" type="image/x-icon" href="./assets/img/musical-note.png">
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <link
       rel="stylesheet"
       href="./assets/font/themify-icons/themify-icons.css"
@@ -15,7 +16,7 @@
   <body>
     <div id="main">
       <div id="header">
-        <!-- begin nav bar -->>
+        <!-- begin nav bar -->
         <ul id="nav">
           <li><a href="#">Home</a></li>
           <li><a href="#Band">Band</a></li>
@@ -27,9 +28,9 @@
               <i class="nav-arrow-down ti-angle-down"></i>
             </a>
             <ul class="subnav">
-              <li><a href="#Merchandise">Merchandise</a></li>
-              <li><a href="">Extras</a></li>
-              <li><a href="">Media</a></li>
+              <li><a href="#">Merchandise</a></li>
+              <li><a href="#">Extras</a></li>
+              <li><a href="#">Media</a></li>
             </ul>
           </li>
         </ul>
@@ -38,6 +39,9 @@
         <!--  Begin search -->
         <div class="searchbtn">
           <i class="search-icon ti-search"></i>
+        </div>
+        <div id="js-mobile-menu" class="mobile-menu">
+          <i class="ti-menu-alt menu-icon"></i>
         </div>
         <!--  End search -->
       </div>
@@ -220,7 +224,7 @@
                       placeholder="Message"
                       required
                       class="form-control"
-                      style="width: calc(100% - 16px)"
+                      style="width: calc(100% - 24px)"
                     />
                   </div>
                 </div>
@@ -313,6 +317,29 @@
       modalContainer.addEventListener("click", function (event) {
         event.stopPropagation();
       });
+    </script>
+    <script>
+      var header=document.getElementById('header');
+      var menu=document.getElementById('js-mobile-menu');
+      var header_hight=header.clientHeight;
+      menu.onclick = function(){
+        var isClose = header.clientHeight===header_hight;
+        if(isClose){
+          header.style.height = 'auto';
+        }
+        else {
+          header.style.height = null;
+        }
+      }  
+      
+      var menuItems=document.querySelectorAll('#nav li a[href*="#"]');
+      for(var i=0;i<menuItems.length;i++){
+        var menuItem = menuItems[i];
+        
+        menuItem.onclick = function(){
+          header.style.height = null;
+        }
+      }
     </script>
   </body>
 </html>
